Addressing 3 bugs. Bug#1 - The thinp option is read-only now. And by default it is checked. Bug#2 - The hostname field under the bricks section was overflowing with content in case the hostname was longer than 200px in length. Truncated the displayed text. Bug#3 - The packages tab has been made visible only in cases where RHVH is not being used. The UI changes can be seen here - https://imgur.com/a/b2oKTsA
Bug-Url: https://bugzilla.redhat.com/show_bug.cgi?id=1610703
Bug-Url: https://bugzilla.redhat.com/show_bug.cgi?id=1590867
Bug-Url: https://bugzilla.redhat.com/show_bug.cgi?id=1600883

--- a/dashboard/static/app.css
+++ b/dashboard/static/app.css
@@ -770,6 +770,18 @@ i.password-mask-icon {
     width: 670px;
 }
 
+.selectbox-option {
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.selectbox-text {
+  max-width: 200px;
+  word-wrap: break-word;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 /*Gluster Management Dashboard*/
 div.gluster-management .table > thead > tr > th,
 div.gluster-management .table > tbody > tr > th,
